fix the alignment of player menu gendervatars

--- a/src/client/global.scss
+++ b/src/client/global.scss
@@ -160,3 +160,7 @@ ion-alert .alert-wrapper {
 .full-width {
   width: 100%;
 }
+
+.player-menu app-gendervatar {
+  padding-left: 10px;
+}
